<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/BackgroundFone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picture_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/girl_on_a_scooter" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:gravity="center"
        android:text="@string/probel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonBus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textBus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubway2"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="156dp"
        android:text="@string/button"
        app:layout_constraintStart_toEndOf="@+id/textSubway"
        app:layout_constraintTop_toBottomOf="@+id/buttonBus" />

    <Button
        android:id="@+id/buttonSubway"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="52dp"
        android:text="@string/button"
        app:layout_constraintStart_toEndOf="@+id/textSubway"
        app:layout_constraintTop_toBottomOf="@+id/buttonBus" />

    <TextView
        android:id="@+id/textBus"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginTop="212dp"
        android:background="#B373C5"
        android:gravity="center"
        android:shadowColor="#6A1010"
        android:shadowRadius="@dimen/material_emphasis_disabled"
        android:text="@string/textBus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSubway"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginTop="312dp"
        android:background="#B373C5"
        android:gravity="center"
        android:shadowColor="#6A1010"
        android:shadowRadius="@dimen/material_emphasis_disabled"
        android:text="@string/textSubway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textJob"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginTop="416dp"
        android:background="#B373C5"
        android:gravity="center"
        android:shadowColor="#6A1010"
        android:shadowRadius="@dimen/material_emphasis_disabled"
        android:text="@string/textJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBus"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="212dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textBus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text="@string/probel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonBus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textBus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:gravity="center"
        android:text="@string/probel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonBus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textBus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="277dp"
        android:layout_height="32dp"
        android:layout_marginBottom="100dp"
        android:background="#4FE455"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>